# vlogger

./: CMakeLists.txt
inc/: vlogger.h
src/: main.cpp  vlogger.cpp
